# apex-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.sh  deny.toml  docker-compose.yml  package.json
.cargo/: audit.toml
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: benchmark-pr.yml  benchmarks.yml  ci.yml  daily-health-check.yml  dependabot-auto-merge.yml  deploy-docs.yml  integration-tests.yml  labeler.yml  release-notifications.yml  release.yml  stale.yml
apex-sdk/: Cargo.toml  README.md
apex-sdk-core/: Cargo.toml  README.md
apex-sdk-core/src/: mocks.rs
apex-sdk-evm/: Cargo.toml  README.md
apex-sdk-evm/benches/: evm_benchmarks.rs
apex-sdk-evm/src/: adapter.rs  cache.rs  lib.rs  pool.rs  signer.rs  transaction.rs  wallet.rs
apex-sdk-evm/tests/: cache_behavior_tests.rs  integration_test.rs  lib_adapter_tests.rs  metrics_collection_tests.rs  pool_connection_tests.rs  transaction_executor_tests.rs  transaction_tests.rs  wallet_operations_tests.rs
apex-sdk-substrate/: Cargo.toml  README.md
apex-sdk-substrate/benches/: substrate_benchmarks.rs  substrate_benchmarks_old.rs.bak
apex-sdk-substrate/src/: cache.rs  contracts.rs  lib.rs  metrics.rs  pool.rs  signer.rs  storage.rs  transaction.rs  typed.rs  wallet.rs  xcm.rs
apex-sdk-substrate/src/metadata/: mod.rs
apex-sdk-substrate/tests/: contracts_test.rs  lib_test.rs  pool_test.rs  storage_test.rs  transaction_test.rs  xcm_test.rs
apex-sdk-types/: Cargo.toml  README.md
apex-sdk-types/benches/: type_benchmarks.rs
apex-sdk-types/src/: lib.rs
apex-sdk-types/tests/: types_integration_tests.rs  types_unit_tests.rs
apex-sdk/benches/: transaction_benchmarks.rs
apex-sdk/src/: advanced.rs  builder.rs  error.rs  error_recovery.rs  lib.rs  performance.rs  sdk.rs  transaction.rs
apex-sdk/tests/: working_integration_tests.rs
cli/: Cargo.toml  README.md
cli/src/: account.rs  balance.rs  completions.rs  config.rs  config_cmd.rs  deploy.rs  keystore.rs  main.rs
cli/tests/: integration_tests.rs
dev/bench/: data.js
docker/: README.md
docker/evm/: Dockerfile  hardhat.config.js
docker/scripts/: run-integration-tests.sh  start-nodes.sh  stop-nodes.sh  wait-for-nodes.sh
docker/substrate/: Dockerfile
docs/: API.md  CLI_GUIDE.md  CONTACT.md  DOCUMENTATION_HUB.md  DOMAINS.md  ECOSYSTEM_INTEGRATION.md  METADATA_GENERATION.md  QUICK_START.md  README.md  RESEARCH_INITIATIVES.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  Substrate_Features.md  TESTNETS.md  _config.yml  _headers  _redirects  deploy-config.js  docs.html  index.html  manifest.json  offline.html  robots.txt  search-manifest.json  sitemap.xml  sw.js  test-config.html  viewer.html
docs/assets/: docs.css  main.js
docs/css/: base.css  main.css  modern.css  modular.css  pages.css  variables.css  viewer.css
docs/css/components/: buttons.css  cards.css  footer.css  navigation.css  networks.css  ui-elements.css
docs/css/layout/: grid.css
docs/css/utilities/: accessibility.css  animations.css  error-handling.css  performance.css
docs/includes/: footer.html  head.html  header.html  scripts.html
docs/js/: README.md  blockchain-viz.js  chains-data.js  config.js  main-browser.js  main-modular.js  main.js  metrics-info.js  metrics.js  particles.js  personalization.js  search.js  seo.js  subscribe.js  workflow-info.js  workflow-simulator.js
docs/js/components/: mobile-menu.js  scroll-effects.js  theme-toggle.js
docs/js/modules/: chain-renderer.js  docs-viewer.js
docs/js/utils/: error-handler.js  helpers.js  performance.js  template-system.js
docs/research/: README.md  index.html  paper-template.tex  papers.json
examples/: README.md
examples/account-manager/: Cargo.toml  README.md  main.rs
examples/basic-transfer/: README.md  main.rs
examples/contract-orchestration/: Cargo.toml  README.md  main.rs
examples/dao-governance/: README.md  main.rs
examples/defi-aggregator/: README.md  main.rs
examples/evm-contract-call/: Cargo.toml  main.rs
examples/evm-transfer/: Cargo.toml  README.md  main.rs
examples/nft-bridge/: README.md  main.rs
examples/parachain-assets/: Cargo.toml  README.md  main.rs
examples/price-oracle/: Cargo.toml  README.md  main.rs
functions/api/: subscribe.js
integration-tests/: Cargo.toml
integration-tests/tests/: evm_integration_test.rs  integration_helpers.rs  real_transaction_test.rs  substrate_integration_test.rs
scripts/: install-git-hooks.sh
