[workspace]
members = [
    "apex-sdk",
    "apex-sdk-core",
    "apex-sdk-substrate",
    "apex-sdk-evm",
    "apex-sdk-types",
    "cli",
]
resolver = "2"

# Known Issues:
# - trie-db v0.30.0 has future incompatibility warnings related to never type fallback
#   This is a transitive dependency from Substrate crates (sp-trie, sp-state-machine)
#   and will be fixed upstream. See: https://github.com/paritytech/trie/issues

[workspace.package]
version = "0.1.4"
edition = "2021"
description = "Compile-time safe, unified Rust SDK for cross-chain blockchain development across Substrate and EVM ecosystems"
authors = ["Khalid Hussein <kherld.hussein@gmail.com>"]
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/eurybits/apex-sdk"
homepage = "https://eurybits.github.io/apex-sdk/"
keywords = ["blockchain", "substrate", "evm", "cross-chain", "web3"]
documentation = "https://eurybits.github.io/apex-sdk/"
categories = ["cryptography::cryptocurrencies", "api-bindings", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Substrate dependencies
subxt = "0.44.0"
sp-core = "38.1.0"
sp-runtime = "44.0.0"

# EVM dependencies (Alloy - fully migrated from ethers-rs)
alloy-primitives = "1.4.1"
alloy = { version = "1.1.2", features = ["full"] }
alloy-provider = "1.1.2"
alloy-signer = "1.1.2"
alloy-signer-local = { version = "1.1.2", features = ["mnemonic"] }
alloy-transport = "1.1.2"
alloy-transport-http = "1.1.2"
alloy-transport-ws = "1.1.2"
alloy-rpc-client = "1.1.2"
alloy-rpc-types = "1.1.2"
alloy-consensus = "1.1.2"
alloy-network = "1.1.2"

# Utilities
hex = "0.4"
bs58 = "0.5"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.2"
sha3 = "0.10"
zeroize = "1.7"

# Dev-dependencies
proptest = "1.4"
criterion = "0.7.0"
mockall = "0.14.0"

# Internal workspace dependencies
apex-sdk-core = { path = "apex-sdk-core" }
apex-sdk-substrate = { path = "apex-sdk-substrate" }
apex-sdk-evm = { path = "apex-sdk-evm" }
apex-sdk-types = { path = "apex-sdk-types" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
