[workspace]
members = [
    "apex-sdk",
    "apex-sdk-core",
    "apex-sdk-substrate",
    "apex-sdk-evm",
    "apex-sdk-types",
    "cli",
]
resolver = "2"

# Known Issues:
# - trie-db v0.30.0 has future incompatibility warnings related to never type fallback
#   This is a transitive dependency from Substrate crates (sp-trie, sp-state-machine)
#   and will be fixed upstream. See: https://github.com/paritytech/trie/issues

[workspace.package]
version = "0.1.4"
edition = "2021"
description = "Compile-time safe, unified Rust SDK for cross-chain blockchain development across Substrate and EVM ecosystems"
authors = ["Khalid Hussein <kherld.hussein@gmail.com>"]
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/carbobit/apex-sdk"
homepage = "https://apexsdk.dev/"
keywords = ["blockchain", "substrate", "evm", "cross-chain", "web3"]
documentation = "https://apexsdk.dev/"
categories = ["cryptography::cryptocurrencies", "api-bindings", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Substrate dependencies
subxt = "0.44.0"
sp-core = "39.0.0"
sp-runtime = "45.0.0"

# EVM dependencies (Alloy - fully migrated from ethers-rs)
alloy-primitives = "1.5.1"
alloy = { version = "1.1.3", features = ["full"] }
alloy-provider = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = { version = "1.1.3", features = ["mnemonic"] }
alloy-transport = "1.1.3"
alloy-transport-http = "1.1.3"
alloy-transport-ws = "1.1.3"
alloy-rpc-client = "1.1.3"
alloy-rpc-types = "1.1.3"
alloy-consensus = "1.1.3"
alloy-network = "1.1.3"

# Utilities
hex = "0.4"
bs58 = "0.5"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
sha3 = "0.10"
zeroize = "1.7"

# Dev-dependencies
proptest = "1.4"
criterion = "0.8.1"
mockall = "0.14.0"

# Internal workspace dependencies
apex-sdk-core = { path = "apex-sdk-core" }
apex-sdk-substrate = { path = "apex-sdk-substrate" }
apex-sdk-evm = { path = "apex-sdk-evm" }
apex-sdk-types = { path = "apex-sdk-types" }

# Development profile - fast compilation, minimal optimizations
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Release profile - production use with maximum security and performance
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Full link-time optimization for security
codegen-units = 1          # Single codegen unit for better optimization
panic = "abort"            # Abort on panic (no unwinding, smaller binary)
strip = true               # Strip symbols for smaller binary and security
overflow-checks = true     # Keep overflow checks in release builds for safety

# Security-hardened profile for production deployments
[profile.release-secure]
inherits = "release"
opt-level = "z"            # Optimize for size (smaller attack surface)
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug-assertions = false
incremental = false

# Benchmark profile - optimized for performance testing
[profile.bench]
inherits = "release"
lto = "thin"               # Thin LTO for faster builds
debug = true               # Keep debug info for profiling

# Test profile - security checks enabled
[profile.test]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true
