[package]
name = "apex-sdk-core"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core functionality for Apex SDK"
keywords = ["blockchain", "substrate", "evm", "sdk", "cross-chain"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[dependencies]
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.4" }
async-trait = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tokio-test = "0.4"
serde_json = { workspace = true }

[features]
default = []
mocks = ["tokio"]