[package]
name = "apex-sdk-core"
version = "0.1.5"
edition = "2021"
description = "Core traits and types for Apex SDK"
license = "Apache-2.0"
repository = "https://github.com/apex-sdk/apex-sdk"

[dependencies]
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.5" }
async-trait = "0.1.80"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
mockall = "0.12.1"

[features]
default = []
mocks = []

[package.metadata.cargo-udeps.ignore]
development = ["mockall"]  # May be used in conditional compilation
