[package]
name = "apex-sdk-evm"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EVM adapter for Apex SDK"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "evm", "ethereum", "web3", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[dependencies]
apex-sdk-core = { path = "../apex-sdk-core", version = "0.1.4" }
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.4" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

# EVM blockchain interaction (Alloy)
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-transport-ws = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-network = { workspace = true }
url = { workspace = true }

[dev-dependencies]
futures = "0.3"
