[package]
name = "apex-sdk-evm"
version = "0.1.5"
edition = "2021"
description = "EVM adapter for Apex SDK"
license = "Apache-2.0"
repository = "https://github.com/apex-sdk/apex-sdk"

[dependencies]
apex-sdk-core = { path = "../apex-sdk-core", version = "0.1.5" }
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.5" }
alloy = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-eips = { workspace = true }
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
thiserror = "1.0.61"
tracing = "0.1.40"
url = "2.5.0"
hex = "0.4.3"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full", "test-util"] }
mockall = "0.12.1"
wiremock = "0.6"
serde_json = { workspace = true }
criterion = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["mockall"]  # May be used in conditional compilation
