[package]
name = "apex-sdk-substrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Substrate adapter for Apex SDK"

[dependencies]
apex-sdk-core = { workspace = true }
apex-sdk-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
