[package]
name = "apex-sdk-types"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Common types for Apex SDK"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "types", "substrate", "evm", "cross-chain"]
categories = ["cryptography::cryptocurrencies", "data-structures"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = "0.10"
thiserror = { workspace = true }
bs58 = "0.5"
blake2 = "0.10"
