[package]
name = "apex-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified Rust SDK for Substrate & EVM blockchain development"
keywords = ["blockchain", "substrate", "ethereum", "cross-chain", "web3"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
apex-sdk-core = { workspace = true }
apex-sdk-substrate = { workspace = true }
apex-sdk-evm = { workspace = true }
apex-sdk-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }

[[example]]
name = "basic_transfer"
path = "../examples/basic-transfer/main.rs"

[[bench]]
name = "transaction_benchmarks"
harness = false
