[package]
name = "apex-sdk"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
tracing.workspace = true
url.workspace = true
sha3.workspace = true

# Internal workspace dependencies
apex-sdk-core.workspace = true
apex-sdk-substrate = { workspace = true, optional = true }
apex-sdk-evm = { workspace = true, optional = true }
apex-sdk-types.workspace = true

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest.workspace = true
mockall.workspace = true

# Benchmarking
criterion.workspace = true

[features]
default = ["substrate", "evm"]
substrate = ["apex-sdk-substrate"]
evm = ["apex-sdk-evm"]
mocks = ["apex-sdk-core/mocks"]

[[bench]]
name = "transaction_benchmarks"
harness = false
