[package]
name = "apex-sdk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool for Apex SDK"

[package.metadata.cargo-udeps.ignore]
normal = ["apex-sdk", "tracing"]

[[bin]]
name = "apex"
path = "src/main.rs"

[dependencies]
apex-sdk = { path = "../apex-sdk", version = "0.1.2" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
