[package]
name = "apex-sdk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool for Apex SDK"

[package.metadata.cargo-udeps.ignore]
normal = ["apex-sdk", "tracing"]

[[bin]]
name = "apex"
path = "src/main.rs"

[dependencies]
apex-sdk = { path = "../apex-sdk", version = "0.1.3" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography & Key Management
sp-core = { workspace = true }
sp-keyring = "44.0.0"
bip39 = "2.0"
rand = { workspace = true }
hex = { workspace = true }

# Secure storage
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1.7"

# Blockchain interaction
subxt = { workspace = true }
subxt-signer = { version = "0.44.0", features = ["sr25519"] }
ethers = { workspace = true }

# UX improvements
indicatif = "0.18.3"
dialoguer = "0.12.0"
colored = "3.0.0"

# File system
dirs = "6.0.0"

# Password input
rpassword = "7.3"

# Date/time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"