[package]
name = "apex-cli"
version = "0.1.5"
edition = "2021"
description = "CLI tool for Apex SDK"
license = "Apache-2.0"

[dependencies]
apex-sdk-core = { path = "../apex-sdk-core", version = "0.1.5" }
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.5" }
apex-sdk-evm = { path = "../apex-sdk-evm", version = "0.1.5" }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
colored = "3.0"
sp-core = { workspace = true }
rand = { workspace = true }
alloy = { workspace = true }
alloy-signer-local = { workspace = true }
subxt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialoguer = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { workspace = true }
bip39 = "2.0"
chrono = { workspace = true }
indicatif = "0.18"
subxt-signer = "0.44"
hex = { workspace = true }
rpassword = "7.3"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.24"
