[workspace]

[package]
name = "contract-orchestration"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "contract-orchestration"
path = "main.rs"

[dependencies]
apex-sdk = { path = "../../apex-sdk" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
hex = "0.4"
alloy = { version = "1.2.1", features = ["sol-types", "rpc-types"] }
alloy-primitives = "1.5.2"
alloy-sol-types = "1.5.2"
parity-scale-codec = "3.6"
