[package]
name = "evm-contract-call"
version = "0.1.4"
edition = "2021"

[workspace]
# This example is not part of the workspace

[[bin]]
name = "evm-contract-call"
path = "main.rs"

[dependencies]
apex-sdk = { path = "../../apex-sdk" }
apex-sdk-evm = { path = "../../apex-sdk-evm" }
apex-sdk-types = { path = "../../apex-sdk-types" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Alloy for real contract interactions
alloy = { version = "1.2.1", features = ["full", "sol-types", "contract", "providers"] }
alloy-primitives = "1.5.2"
alloy-sol-types = "1.2.1"
