[workspace]

[package]
name = "evm-transfer"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "evm-transfer"
path = "main.rs"

[dependencies]
apex-sdk = { path = "../../apex-sdk" }
apex-sdk-evm = { path = "../../apex-sdk-evm" }
alloy-primitives = "1.5.2"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
