[workspace]

[package]
name = "parachain-assets"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "parachain-assets"
path = "main.rs"

[dependencies]
apex-sdk = { path = "../../apex-sdk" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
